Footer: Clear all floats to avoid content overlap.

--- a/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
@@ -1,4 +1,5 @@
 .wp-block-group.global-footer {
+	clear: both;
 	padding: 44px var(--wp--custom--alignment--edge-spacing);
 
 	@media (--tablet) {
